Fix another layout bug introduced by news layout changes

--- a/wp-content/themes/lsb-base-theme/assets/less/layouts/_posts.less
+++ b/wp-content/themes/lsb-base-theme/assets/less/layouts/_posts.less
@@ -12,9 +12,31 @@
   }
 }
 
-.loop article {
-  margin-bottom: @line-height-computed*2;
-  header {
-    margin-bottom: @line-height-computed;
+.loop {
+  h1 {
+    font-size: @font-size-h2;
+  }
+
+  h2 {
+    font-size: @font-size-h3;
+  }
+
+  h3 {
+    font-size: @font-size-h4;
+  }
+
+  h4 {
+    font-size: @font-size-h5;
+  }
+
+  h5 {
+    font-size: @font-size-h6;
+  }
+  
+  article {
+    margin-bottom: @line-height-computed*2;
+    header {
+      margin-bottom: @line-height-computed;
+    }
   }
 }
